--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                 lastChangeTime = millis();
             }
 
+            // Set background color
             background(255);
+            // Display received data
             text(receivedData, 50, 50);
         }
 
@@ -101,7 +103,6 @@
             // Set background color
             background(r, g, b);
         }
-//
     </script>
 </body>
 </html>
