--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
     <script type="text/javascript">
         // Processing 4 sketch
         let receivedData = "No data";
-        let lastChangeTime = 0;
 
         function setup() {
             createCanvas(400, 400);
@@ -76,11 +75,8 @@
         }
 
         function draw() {
-            // Change background color every 2 seconds
-            if (millis() - lastChangeTime > 2000) {
-                changeBackgroundColor();
-                lastChangeTime = millis();
-            }
+            // Change background color every frame
+            changeBackgroundColor();
 
             // Set background color
             background(255);
