--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
     <script>
         let characteristic;
-        let lastColorChangeTime = 0;
 
         async function connectToDevice() {
             try {
@@ -52,13 +51,13 @@
             const textDecoder = new TextDecoder();
             const decodedValue = textDecoder.decode(value);
             // Pass the received data to Processing sketch
-            sendDataToSketch(decodedValue);
+            receiveData(decodedValue);
         }
 
-        // Function to send data to Processing sketch
-        function sendDataToSketch(data) {
-            if (window.sendToProcessing) {
-                window.sendToProcessing(data);
+        // Function to receive data from JavaScript
+        function receiveData(data) {
+            if (window.receiveDataFromSerial) {
+                window.receiveDataFromSerial(data);
             } else {
                 console.error('Processing sketch not initialized.');
             }
@@ -67,41 +66,129 @@
 
     <script type="text/javascript">
         // Processing 4 sketch
-        let receivedData = "No data";
+        int numPotentiometers = 8;
+        float[] potValues;
+        color[] lineColors;
+        color[] backgroundColors;
+        String[] labels = {"LEFT SHOULDER", "LEFT FOREARM", "HEAD", "RIGHT SHOULDER", "RIGHT FOREARM", "WAIST", "LEFT LEG", "RIGHT LEG"};
+        boolean isMovingUp = false;
+        boolean isMovingDown = false;
 
-        function setup() {
-            createCanvas(400, 400);
-            fill(0);
-            textSize(20);
+        void setup() {
+          size(1000, 500);
+          potValues = new float[numPotentiometers];
+          lineColors = new color[numPotentiometers];
+          backgroundColors = new color[numPotentiometers];
+          setupColors();
+          setupBackgroundColors();
         }
 
-        function draw() {
-            // Change background color every 2 seconds
-            if (millis() - lastColorChangeTime >= 2000) {
-                changeBackgroundColor();
-                lastColorChangeTime = millis();
-            }
-            // Display received data
-            text(receivedData, 50, 50);
+        void draw() {
+          background(255);
+
+          float lineHeight = height / (float)numPotentiometers;
+          for (int i = 0; i < numPotentiometers; i++) {
+            float lineY = i * lineHeight + lineHeight / 2;
+
+            // Draw the background rectangle
+            noStroke();
+            fill(backgroundColors[i]);
+            rect(0, i * lineHeight, width, lineHeight);
+
+            // Draw the line with different color for each
+            strokeWeight(50);
+            stroke(lineColors[i]);
+            line(0, lineY, map(potValues[i], 0, 4095, 0, width), lineY);
+
+            // Display the corresponding value to the left of the line
+            fill(255);
+            textAlign(RIGHT, CENTER);
+            textSize(16);
+            text(int(potValues[i]), map(potValues[i], 0, 4095, 0, width) - 10, lineY);
+          }
+
+          // Draw vertical labels on the right side
+          textAlign(RIGHT, CENTER);
+          textSize(32);
+          fill(255);
+          for (int i = 0; i < numPotentiometers; i++) {
+            text(labels[i], width - 10, i * lineHeight + lineHeight / 2 + 12);
+          }
+
+          // Detect movement and display corresponding text
+          // checkMovement();
         }
 
         // Function to receive data from JavaScript
-        function receiveData(data) {
-            receivedData = data;
+        void receiveData(String data) {
+          String[] values = split(data, ',');
+          if (values.length == numPotentiometers) {
+            for (int i = 0; i < numPotentiometers; i++) {
+              potValues[i] = float(values[i]);
+            }
+          }
         }
 
-        // Function to send data to JavaScript
-        function sendToProcessing(data) {
-            receiveData(data);
+        void checkMovement() {
+          float sensitivity = 0.10; // 10%
+
+          // Check for significant increase in left arm (potentiometer 1 increases and potentiometer 2 decreases)
+          if (potValues[0] > potValues[1] && (potValues[0] - potValues[1]) / potValues[0] > sensitivity) {
+            isMovingUp = true;
+            isMovingDown = false;
+            displayMovementText("UP", 0);
+          }
+          // Check for significant decrease in left arm (potentiometer 1 decreases and potentiometer 2 increases)
+          else if (potValues[0] < potValues[1] && (potValues[1] - potValues[0]) / potValues[1] > sensitivity) {
+            isMovingUp = false;
+            isMovingDown = true;
+            displayMovementText("DOWN", 0);
+          }
+          // Check for significant increase in right arm (potentiometer 4 increases and potentiometer 5 decreases)
+          else if (potValues[3] > potValues[4] && (potValues[3] - potValues[4]) / potValues[3] > sensitivity) {
+            isMovingUp = true;
+            isMovingDown = false;
+            displayMovementText("UP", 3);
+          }
+          // Check for significant decrease in right arm (potentiometer 4 decreases and potentiometer 5 increases)
+          else if (potValues[3] < potValues[4] && (potValues[4] - potValues[3]) / potValues[4] > sensitivity) {
+            isMovingUp = false;
+            isMovingDown = true;
+            displayMovementText("DOWN", 3);
+          } else {
+            // No significant movement
+            isMovingUp = false;
+            isMovingDown = false;
+            background(255); // Clear previous movement text
+          }
         }
 
-        function changeBackgroundColor() {
-            // Generate random color values
-            let r = random(255);
-            let g = random(255);
-            let b = random(255);
-            // Set background color
-            background(r, g, b);
+        void displayMovementText(String textToShow, int potentiometerNumber) {
+          fill(0); // Black text
+          textAlign(CENTER, CENTER);
+          textSize(64);
+          text("Pot " + (potentiometerNumber + 1) + ": " + textToShow, width / 2, height / 2);
+        }
+
+        void setupColors() {
+          lineColors[0] = color(204, 204, 0);   // Dark Yellow
+          lineColors[1] = color(204, 204, 0);   // Dark Yellow
+          lineColors[2] = color(255, 0, 0);     // Red
+          lineColors[3] = color(204, 204, 0);   // Dark Yellow
+          lineColors[4] = color(204, 204, 0);   // Dark Yellow
+          lineColors[5] = color(0, 255, 0);     // Bright Green
+          lineColors[6] = color(0, 128, 0);     // Grass Green
+          lineColors[7] = color(0, 128, 0);     // Grass Green
+        }
+        void setupBackgroundColors() {
+          backgroundColors[0] = color(0, 0, 0);         // 0% black
+          backgroundColors[1] = color(0, 0, 0);         // 0% black
+          backgroundColors[2] = color(0, 0, 0, 200);    // 90% black
+          backgroundColors[3] = color(0, 0, 0, 230);    // 75% black
+          backgroundColors[4] = color(0, 0, 0, 230);    // 60% black
+          backgroundColors[5] = color(0, 0, 0, 128);    // 60% black
+          backgroundColors[6] = color(0, 0, 0, 100);    // 60% black
+          backgroundColors[7] = color(0, 0, 0, 100);    // 60% black
         }
     </script>
 </body>
