--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
         let isMovingDown = false;
 
         function setup() {
-            createCanvas(1000, 500);
+            let canvasWidth = windowWidth * 0.9; // 90% of window width
+            let canvasHeight = (canvasWidth / 1000) * 500; // Maintain original aspect ratio
+
+            createCanvas(canvasWidth, canvasHeight);
             potValues = [0, 0, 0, 0, 0, 0, 0, 0]; // Initialize potValues array with default values
             lineColors = new Array(numPotentiometers);
             backgroundColors = new Array(numPotentiometers);
