--- a/index.html
+++ b/index.html
@@ -75,10 +75,7 @@
         let isMovingDown = false;
 
         function setup() {
-            let screenWidth = 375; // Width of iPhone screen in pixels
-            let screenHeight = screenWidth * 16 / 9; // Calculate height based on 16:9 aspect ratio
-
-            createCanvas(screenWidth, screenHeight);
+            createCanvas(1100, 1300);
             potValues = [0, 0, 0, 0, 0, 0, 0, 0]; // Initialize potValues array with default values
             lineColors = new Array(numPotentiometers);
             backgroundColors = new Array(numPotentiometers);
