--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             textAlign(LEFT, CENTER);
             let labelFontSize = min(width, height) * 0.03; // Responsive font size for labels
             textSize(labelFontSize);
-            fill(0); // Set text color to black
+            fill(255); // Set text color to white
             for (let i = 0; i < numPotentiometers; i++) {
                 text(labels[i], width * 0.9, i * lineHeight + lineHeight / 2);
             }
